# reed-solomon_RD-II

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  FEATURE.md  README.md  TODO.md  docker-compose.edge.yml  docker-compose.yml  package-lock.json  package.json
client/agent/: Dockerfile  README.md  docker-compose.headless.yml  pyproject.toml  rs_agent.spec  run.py
client/agent/src/: config.py  config_router.py  config_store.py  main.py  run.py  server_client.py  token_store.py
client/agent/src/daemon/: __init__.py  cli.py  linux.py  macos.py  windows.py
client/agent/src/files/: router.py
client/agent/src/metrics/: otel.py  probe.py
client/agent/src/peers/: router.py
client/agent/src/rs/: models.py  transport.py
client/agent/src/storage/: db.py
client/agent/src/transfers/: models.py  router.py
client/agent/tests/: conftest.py  test_api_files.py  test_api_transfers.py  test_config.py  test_rs_codec.py  test_storage.py  test_transport.py
server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
server/keycloak/: rockdove-realm.json
server/src/: config.py  main.py  neo4j_client.py  redis_client.py
server/src/auth/: __init__.py  deps.py  verifier.py
server/src/device_tokens/: models.py  router.py  store.py
server/src/invites/: models.py  router.py
server/src/metrics/: collector.py  models.py  recommender.py  router.py
server/src/peers/: router.py  routing.py
services/fileserver/: Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements.txt  storage.py
services/fileserver/src/: main.py
(+74 files in other folders)
