[project]
name = "rs-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.1",
    "reedsolo==1.7.0",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.20",
    "aiosqlite>=0.20",
    "aioquic>=1.0.0",
    "cryptography>=42.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
